exports[`Stepper should render its steps 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Object {
          "backgroundColor": "#e5e5e5",
          "flexDirection": "row",
          "height": 6,
        }
      }>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f77040",
            },
            Object {
              "flex": 0.5,
            },
          ]
        } />
      <View
        style={
          Object {
            "flex": 0.5,
          }
        } />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
          "width": 750,
        }
      }>
      <View
        style={
          Array [
            Object {
              "width": 375,
            },
            Object {
              "width": 0,
            },
          ]
        }
        uid={1}>
        <View
          style={
            Object {
              "flex": 1,
            }
          }>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                },
                undefined,
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail">
              Step 2
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "width": 375,
            },
            false,
          ]
        }
        uid={0}>
        <View
          style={
            Object {
              "flex": 1,
            }
          }>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                },
                undefined,
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail">
              Step 1
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Stepper should toggle the rendering of the progressBar 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
          "width": 750,
        }
      }>
      <View
        style={
          Array [
            Object {
              "width": 375,
            },
            Object {
              "width": 0,
            },
          ]
        }
        uid={1}>
        <View
          style={
            Object {
              "flex": 1,
            }
          }>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                },
                undefined,
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail">
              Step 2
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "width": 375,
            },
            false,
          ]
        }
        uid={0}>
        <View
          style={
            Object {
              "flex": 1,
            }
          }>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                },
                undefined,
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail">
              Step 1
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
